--- a/01_Starfield/index.html
+++ b/01_Starfield/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Starfield p5.js</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
+    <script src="./star.js"></script>
     <script src="./sketch.js"></script>
   </head>
   <body>
